# taskmajor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING_QUICK_START.md  Dockerfile  Dockerfile.new_900MB  Dockerfile_optimized  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: agents-ci.yaml  ci.yml  docs.yml  mcp-regenerate.yml  mcp-validate.yml  publish.yml
doc_agents/: ADRs.md  AGENT_CONFIGURATION.md  ARCHITECTURE.md  DEPENDENCIES.md  MCP_INTERFACE.md  PROFILES.md
docs/: index.md
docs/api-reference/: autodoc.md  index.md  resources.md  tools.md
docs/deployment/: build-from-source.md  docker-compose.full.md  docker-custom-profile.md  docker.md
docs/developer/: agent-integrations.md  architecture.md  branch-protection.md  ci-cd-infrastructure.md  contributing.md  mcp-components.md  observability.md  packaging.md  pre-commit.md  profile-composition.md  testing.md
docs/getting-started/: configuration.md  getting-started.md  index.md  quickstart.md
docs/user-guides/: workflows.md
taskmajor/: __init__.py
taskmajor/bootstrap/: __init__.py  core.py  server.py
taskmajor/config/: config.yaml
taskmajor/domains/: __init__.py
taskmajor/mcp/: __init__.py  errors.py
taskmajor/utils/: __init__.py  task_serializer.py  taskwarrior_proxy.py
tests/: conftest.py  test_bootstrap_server.py  test_cli_sync.py  test_server_import.py  test_sync_engine.py  test_task_serializer.py  test_taskwarrior_proxy.py  test_tools.py
tests/bootstrap/: test_core.py
tests/integration/: test_profiles_integration.py
tests/mcp/: test_config_tools.py  test_context_tools.py  test_date_resources.py  test_date_templates.py  test_date_tools.py  test_errors.py  test_mcp_endpoints.py  test_mcp_uri_uniqueness.py  test_project_templates.py  test_resource_mapper_mcp.py  (+3 more)
tools/: generate_profile_docs.py  simulate_profiles.py
(+117 files in other folders)
